ajustando jogo e log